# DataAnalytics

./: Lab1.py  Prezentacja.slides.html  bern_1  bern_1.hpp
.ipynb_checkpoints/: Prezentacja-checkpoint.ipynb
Jakub_Pudlo_PSCR/Telltale/telltale_simulation/: CMakeLists.txt  keyboard.c  keyboard.h  logger.c  logger.h  node1.c  node1.h  node2.c  node2.h  periodic.c  periodic.h  screen.c  screen.h  simulation.c  simulation.h  telltale_simulation.c
Lab1/: Lab1.py  Untitled.ipynb  bern_1  bern_1.hpp  lab1.ipynb
Lab2/: Lab2.py  code_1  code_1.hpp  code_1.stan  code_10  code_10.hpp  code_10.stan  code_2  code_2.hpp  code_2.stan  code_3  code_3.hpp  code_3.stan  code_4  code_4.hpp  code_4.stan  code_5  code_5.hpp  code_5.stan  code_6  code_6.hpp  code_6.stan  code_7  code_7.hpp  code_7.stan  code_8  code_8.hpp  code_8.stan  code_9  code_9.hpp  code_9.stan  lab2.ipynb
Lab3/: Lab3.py  lab3.ipynb  stan1  stan1.hpp  stan1.stan  stan2  stan2.hpp  stan2.stan  stan3  stan3.hpp  stan3.stan  stan4  stan4.hpp  stan4.stan
Lab4/: generate_data  generate_data.hpp  generate_data.stan  height_1_fit  height_1_fit.hpp  height_1_fit.stan  height_1_ppc  height_1_ppc.hpp  height_1_ppc.stan  height_2_fit  height_2_fit.hpp  height_2_fit.stan  height_2a_ppc  height_2a_ppc.hpp  height_2a_ppc.stan  height_2b_ppc  height_2b_ppc.hpp  height_2b_ppc.stan  lab4.ipynb  model1  model1.hpp  model1.stan  model2  model2.hpp  model2.stan  model3  model3.hpp  model3.stan
Lab5/: logistic_regression  logistic_regression.hpp  logistic_regression.stan  logistic_regression_ppc  logistic_regression_ppc.hpp  (+1 more)
(+193 files in other folders)
